(lang dune 3.14)

(name script_utils)

(generate_opam_files true)

(source
 (github filipeom/script-utils))

(authors "Filipe Marques")

(maintainers "Filipe Marques")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name script_utils)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
